# app/msgpusher/cmd/server/wire_gen.go
@@ -1,0 +1,41 @@
+// Code generated by Wire. DO NOT EDIT.
+
+//go:generate go run github.com/google/wire/cmd/wire
+//go:build !wireinject
+// +build !wireinject
+
+package main
+
+import (
+	"austin-v2/app/msgpusher/internal/biz"
+	"austin-v2/app/msgpusher/internal/conf"
+	"austin-v2/app/msgpusher/internal/data"
+	"austin-v2/app/msgpusher/internal/server"
+	"austin-v2/app/msgpusher/internal/service"
+	"github.com/go-kratos/kratos/v2"
+	"github.com/go-kratos/kratos/v2/log"
+)
+
+// Injectors from wire.go:
+
+// wireApp init kratos application.
+func wireApp(confServer *conf.Server, confData *conf.Data, logger log.Logger) (*kratos.App, func(), error) {
+	broker, cleanup, err := data.NewBroker(confData, logger)
+	if err != nil {
+		return nil, nil, err
+	}
+	dataData, cleanup2, err := data.NewData(confData, logger, broker)
+	if err != nil {
+		cleanup()
+		return nil, nil, err
+	}
+	greeterRepo := data.NewGreeterRepo(dataData, logger)
+	greeterUsecase := biz.NewGreeterUsecase(greeterRepo, logger)
+	msgPusherService := service.NewMsgPusherService(greeterUsecase, broker, logger)
+	grpcServer := server.NewGRPCServer(confServer, msgPusherService, logger)
+	app := newApp(logger, grpcServer)
+	return app, func() {
+		cleanup2()
+		cleanup()
+	}, nil
+}
