# openapi.yaml
@@ -3,8 +3,118 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: MsgPusher API
     version: 0.0.1
-paths: {}
+paths:
+    /msg_pusher/v1/batch_send:
+        post:
+            tags:
+                - MsgPusher
+            operationId: MsgPusher_BatchSend
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/BatchSendRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SendResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /msg_pusher/v1/send:
+        post:
+            tags:
+                - MsgPusher
+            operationId: MsgPusher_Send
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/SendRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SendResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
-    schemas: {}
+    schemas:
+        BatchSendRequest:
+            type: object
+            properties:
+                Code:
+                    type: string
+                MessageTemplateId:
+                    type: integer
+                    format: int64
+                MessageParam:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MessageParam'
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        MessageParam:
+            type: object
+            properties:
+                Receiver:
+                    type: string
+                Variables:
+                    type: string
+                Extra:
+                    type: string
+        SendRequest:
+            type: object
+            properties:
+                Code:
+                    type: string
+                MessageTemplateId:
+                    type: integer
+                    format: int64
+                MessageParam:
+                    $ref: '#/components/schemas/MessageParam'
+        SendResponse:
+            type: object
+            properties:
+                Code:
+                    type: string
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+tags:
+    - name: MsgPusher
